--- a/day01/src/CMakeLists.txt
+++ b/day01/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Note that headers are optional, and do not affect add_library, but they will not
 # show up in IDEs unless they are listed in add_library.
 
-# Optionally glob, but only for CMake 3.12 or later:
+# Requires CMake 3.12 or later:
 file(GLOB HEADER_LIST CONFIGURE_DEPENDS "${day01_SOURCE_DIR}/include/*.hpp")
 
 # Make an automatic library - will be static or dynamic based on user setting
