--- a/day04/CMakeSettings.json
+++ b/day04/CMakeSettings.json
@@ -10,6 +10,7 @@
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
+      "enableClangTidyCodeAnalysis":  true,
       "enableMicrosoftCodeAnalysis": true,
       "codeAnalysisRuleset": "AllRules.ruleset"
     },
