--- a/day11/tests/CMakeLists.txt
+++ b/day11/tests/CMakeLists.txt
@@ -15,7 +15,7 @@ add_executable(day11-tests testlib.cpp)
 target_compile_features(day11-tests PRIVATE cxx_std_17)
 
 # Should be linked to the main library, Eigen, and the Doctest testing library
-target_link_libraries(day11-tests PRIVATE day11-core Eigen3::Eigen doctest::doctest)
+target_link_libraries(day11-tests PRIVATE day11-core doctest::doctest)
 
 if(MSVC)
     target_compile_options(day11-tests PRIVATE /external:anglebrackets /external:W0 /analyze:external- /W4 /WX)
